message broker performance tweaks